2004-03-03  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/posix_fadvise.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/posix_fadvise64.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/syscalls.list (posix_fadvise64):
	Remove.
	* sysdeps/unix/sysv/linux/alpha/posix_fadvise.c: New file.
	* sysdeps/unix/sysv/linux/alpha/posix_fadvise64.c: New file.
	* sysdeps/unix/sysv/linux/alpha/syscalls.list (posix_fadvise64):
	Remove.
	* sysdeps/unix/sysv/linux/ia64/posix_fadvise.c: New file.
	* sysdeps/unix/sysv/linux/ia64/posix_fadvise64.c: New file.
	* sysdeps/unix/sysv/linux/ia64/syscalls.list (posix_fadvise64):
	Remove.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/posix_fadvise.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/posix_fadvise64.c: New
	file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/syscalls.list: Removed.
	* sysdeps/unix/sysv/linux/s390/s390-64/posix_fadvise.c: New file.
	* sysdeps/unix/sysv/linux/s390/s390-64/posix_fadvise64.c: New file.
	* sysdeps/unix/sysv/linux/s390/s390-64/syscalls.list
	(posix_fadvise64): Remove.
	* sysdeps/unix/sysv/linux/sparc/sparc64/posix_fadvise.c: New file.
	* sysdeps/unix/sysv/linux/sparc/sparc64/posix_fadvise64.c: New file.
	* sysdeps/unix/sysv/linux/sparc/sparc64/syscalls.list
	(posix_fadvise64): Remove.

2004-03-02  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/xstat.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fxstat.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/lxstat.c: New file.

2004-03-01  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_getgr_r.c (nscd_getgr_r): Add missing initialization
	of return value.
	* nscd/nscd_gethst_r.c (nscd_gethst_r): Likewise.

	* sysdeps/unix/sysv/linux/kernel-features.h: Add support for
	__ASSUME_GETDENTS32_D_TYPE.
	* sysdeps/unix/sysv/linux/getdents.c: For 2.6.4+ kernels use
	getdents syscall again since it provides d_type information.

2004-02-29  Andreas Jaeger  <aj@suse.de>
