@@ -1,3 +1,12 @@
+2004-03-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* iconv/iconv_prog.c (process_block): Handle omit_invalid.
+	If iconv returns EILSEQ with omit_invalid, continue converting
+	and return 1 if no other errors are seen.
+	(main): Set status to EXIT_FAILURE whenever process_* returns
+	nonzero, but only stop processing further files if iy returns
+	negative value.
+
 2004-03-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/unix/sysv/linux/x86_64/posix_fadvise.c: New file.
